not working test

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     </section>    
   
-    <!-- github test -->
+    <!-- github test 2 -->
       <section class="mySlides w3-
     black">
           
